deps: three and typescirpt

--- a/package.json
+++ b/package.json
@@ -4,5 +4,12 @@
   "main": "index.js",
   "repository": "ssh://git@github.com/k3nt0w/prac-3d.git",
   "author": "k3nt0w <kento.watanabe.11@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc"
+  },
+  "dependencies": {
+    "three": "^0.112.1",
+    "typescript": "^3.7.5"
+  }
 }
