--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "author": "k3nt0w <kento.watanabe.11@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "build": "webpack"
   },
   "dependencies": {
     "three": "^0.112.1",
     "typescript": "^3.7.5"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "ts-loader": "^6.2.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
