--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.1",
     "webpack": "^4.41.5",
