--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "k3nt0w <kento.watanabe.11@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack-dev-server"
   },
   "dependencies": {
     "three": "^0.112.1",
@@ -17,6 +18,7 @@
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.1",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
